--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <div class="cards">
             <a href="restaurant.html" class="card">
-              <img class="img-card" src="/img/card.jpg" alt="card">
+              <img class="img-card" src="img/card.jpg" alt="card">
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title">Пицца плюс</h3>
@@ -59,14 +59,14 @@
               </div>
             </a>
             <a href="restaurant.html" class="card">
-              <img class="img-card" src="/img/2.jpg" alt="card">
+              <img class="img-card" src="img/2.jpg" alt="card">
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title">Тануки</h3>
                   <span class="card-tag tag">570 мин</span>
                 </div>
                 <div class="card-info">
-                  <div class="rating"><img class="star" src="/img/rating.svg" alt="">
+                  <div class="rating"><img class="star" src="img/rating.svg" alt="">
                     5.5</div>
                   <div class="price">От 12200 ₽</div>
                   <div class="category">Пицца</div>
@@ -74,14 +74,14 @@
               </div>
             </a>
             <a href="restaurant.html" class="card">
-              <img class="img-card" src="/img/3.jpg" alt="card">
+              <img class="img-card" src="img/3.jpg" alt="card">
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title">FoodBand</h3>
                   <span class="card-tag tag">76 мин</span>
                 </div>
                 <div class="card-info">
-                  <div class="rating"><img class="star" src="/img/rating.svg" alt="">
+                  <div class="rating"><img class="star" src="img/rating.svg" alt="">
                     1.5</div>
                   <div class="price">От 2300 ₽</div>
                   <div class="category">Пицца</div>
@@ -89,7 +89,7 @@
               </div>
             </a>
             <a href="restaurant.html" class="card">
-              <img class="img-card" src="/img/4.jpg" alt="card">
+              <img class="img-card" src="img/4.jpg" alt="card">
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title">Жадина-пицца</h3>
