--- a/restaurant.html
+++ b/restaurant.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delivery food - доставка еду домой</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="/css/animate.css">
+  <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -20,11 +20,11 @@
       <input type="text" class="input input-addres" placeholder="Адрес доставки">
       <div class="buttons">
         <button class="button button-primary">
-          <img src="/img/user.svg" alt="user" class="button-icon">
+          <img src="img/user.svg" alt="user" class="button-icon">
           <span class="button-text">Войти</span>
         </button>
         <button class="button" id="cart-button">
-          <img src="/img/shopping-cart.svg" alt="shopping-cart" class="button-icon">
+          <img src="img/shopping-cart.svg" alt="shopping-cart" class="button-icon">
           <span class="button-text">Корзина</span>
         </button>
       </div>
@@ -38,7 +38,7 @@
         <div class="section-heading">
           <h2 class="section-title">Pizza Burger</h2>
           <div class="card-info">
-            <div class="rating"><img class="star" src="/img/rating.svg" alt="">
+            <div class="rating"><img class="star" src="img/rating.svg" alt="">
               1.5</div>
             <div class="price">От 2300 ₽</div>
             <div class="category">Пицца</div>
@@ -46,7 +46,7 @@
         </div>
         <div class="cards">
           <div class="card wow fadeInUp" data-wow-delay="0.2s">
-            <img class="img-card" src="/img/21.jpg" alt="card">
+            <img class="img-card" src="img/21.jpg" alt="card">
             <div class="card-text">
               <div class="card-heading">
                 <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
@@ -57,14 +57,14 @@
               <div class="card-button">
                 <button class="button button-primary">
                   <span class="button-card-text">В корзину</span>
-                  <img class="button-card-img" src="/img/buttonkorzina.svg" alt="shoping">
+                  <img class="button-card-img" src="img/buttonkorzina.svg" alt="shoping">
                 </button>
                 <strong class="card-price-bold">250 ₽</strong>
               </div>
             </div>
           </div>
           <div class="card wow fadeInUp" data-wow-delay="0.4s">
-            <img class="img-card" src="/img/22.jpg" alt="card">
+            <img class="img-card" src="img/22.jpg" alt="card">
             <div class="card-text">
               <div class="card-heading">
                 <h3 class="card-title card-title-reg">Калифорния лосось стандарт</h3>
@@ -75,14 +75,14 @@
               <div class="card-button">
                 <button class="button button-primary">
                   <span class="button-card-text">В корзину</span>
-                  <img class="button-card-img" src="/img/buttonkorzina.svg" alt="shoping">
+                  <img class="button-card-img" src="img/buttonkorzina.svg" alt="shoping">
                 </button>
                 <strong class="card-price-bold">395 ₽</strong>
               </div>
             </div>
           </div>
           <div class="card wow fadeInUp" data-wow-delay="0.6s">
-            <img class="img-card" src="/img/23.jpg" alt="card">
+            <img class="img-card" src="img/23.jpg" alt="card">
             <div class="card-text">
               <div class="card-heading">
                 <h3 class="card-title card-title-reg">Окинава стандарт</h3>
@@ -93,14 +93,14 @@
               <div class="card-button">
                 <button class="button button-primary">
                   <span class="button-card-text">В корзину</span>
-                  <img class="button-card-img" src="/img/buttonkorzina.svg" alt="shoping">
+                  <img class="button-card-img" src="img/buttonkorzina.svg" alt="shoping">
                 </button>
                 <strong class="card-price-bold">250 ₽</strong>
               </div>
             </div>
           </div>
           <div class="card wow fadeInUp" data-wow-delay="0.2s">
-            <img class="img-card" src="/img/24.jpg" alt="card">
+            <img class="img-card" src="img/24.jpg" alt="card">
             <div class="card-text">
               <div class="card-heading">
                 <h3 class="card-title card-title-reg">Цезарь маки хl</h3>
@@ -112,14 +112,14 @@
               <div class="card-button">
                 <button class="button button-primary">
                   <span class="button-card-text">В корзину</span>
-                  <img class="button-card-img" src="/img/buttonkorzina.svg" alt="shoping">
+                  <img class="button-card-img" src="img/buttonkorzina.svg" alt="shoping">
                 </button>
                 <strong class="card-price-bold">250 ₽</strong>
               </div>
             </div>
           </div>
           <div class="card wow fadeInUp" data-wow-delay="0.4s">
-            <img class="img-card" src="/img/25.jpg" alt="card">
+            <img class="img-card" src="img/25.jpg" alt="card">
             <div class="card-text">
               <div class="card-heading">
                 <h3 class="card-title card-title-reg">Ясай маки стандарт 185 г</h3>
@@ -130,14 +130,14 @@
               <div class="card-button">
                 <button class="button button-primary">
                   <span class="button-card-text">В корзину</span>
-                  <img class="button-card-img" src="/img/buttonkorzina.svg" alt="shoping">
+                  <img class="button-card-img" src="img/buttonkorzina.svg" alt="shoping">
                 </button>
                 <strong class="card-price-bold">250 ₽</strong>
               </div>
             </div>
           </div>
           <div class="card wow fadeInUp" data-wow-delay="0.6s">
-            <img class="img-card" src="/img/26.jpg" alt="card">
+            <img class="img-card" src="img/26.jpg" alt="card">
             <div class="card-text">
               <div class="card-heading">
                 <h3 class="card-title card-title-reg">Ролл с креветкой стандарт</h3>
@@ -148,7 +148,7 @@
               <div class="card-button">
                 <button class="button button-primary">
                   <span class="button-card-text">В корзину</span>
-                  <img class="button-card-img" src="/img/buttonkorzina.svg" alt="shoping">
+                  <img class="button-card-img" src="img/buttonkorzina.svg" alt="shoping">
                 </button>
                 <strong class="card-price-bold">250 ₽</strong>
               </div>
@@ -162,7 +162,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-block">
-        <img class="logo footer-logo" src="/img/logo-footer.svg" alt="footer-blog">
+        <img class="logo footer-logo" src="img/logo-footer.svg" alt="footer-blog">
         <nav class="footer-nav">
           <a href="#" class="footer-link">Ресторам</a>
           <a href="#" class="footer-link">Курьерам</a>
@@ -170,9 +170,9 @@
           <a href="#" class="footer-link">Контакты</a>
         </nav>
         <div class="social-link">
-          <a href="#" class="social-link"><img class="img-fluid" src="/img/inst.svg" alt="inst"></a>
-          <a href="#" class="social-link"><img class="img-fluid" src="/img/fb.svg" alt="fb"></a>
-          <a href="#" class="social-link"><img class="img-fluid" src="/img/vk.svg" alt="vk"></a>
+          <a href="#" class="social-link"><img class="img-fluid" src="img/inst.svg" alt="inst"></a>
+          <a href="#" class="social-link"><img class="img-fluid" src="img/fb.svg" alt="fb"></a>
+          <a href="#" class="social-link"><img class="img-fluid" src="img/vk.svg" alt="vk"></a>
         </div>
       </div>
     </div>
