--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="img/user.svg" alt="user" class="button-icon">
           <span class="button-text">Войти</span>
         </button>
-        <button class="button id="cart-button"">
+        <button class="button id="cart-button">
           <img src="img/shopping-cart.svg" alt="shopping-cart" class="button-icon">
           <span class="button-text">Корзина</span>
         </button>
